# bazel-ls-demo-project

./: .gitignore  README.md  WORKSPACE
.github/workflows/: main.yml
large/: .bazelrc  WORKSPACE
large/module0001_internal/: BUILD.bazel
large/module0001_public/: BUILD.bazel
large/module0003_public/: BUILD.bazel
large/module0004/: BUILD.bazel
large/module0004_public/: BUILD.bazel
large/module0005_public/: BUILD.bazel
large/module0007_internal/: BUILD.bazel
large/module0007_public/: BUILD.bazel
large/module0009/: BUILD.bazel
large/module0009_generated/: BUILD.bazel
large/module0009_public/: BUILD.bazel
large/module0010/: BUILD.bazel
large/module0010_public/: BUILD.bazel
large/module0011_public/: BUILD.bazel
large/module0011_public/src/java/module0011_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module0013_internal/: BUILD.bazel
large/module0013_public/: BUILD.bazel
large/module0015_generated/: BUILD.bazel
large/module0015_internal/: BUILD.bazel
large/module0015_public/: BUILD.bazel
large/module0017_generated/: BUILD.bazel
large/module0017_internal/: BUILD.bazel
large/module0017_public/: BUILD.bazel
large/module0019/: BUILD.bazel
large/module0020_generated/: BUILD.bazel
large/module0020_internal/: BUILD.bazel
large/module0020_public/: BUILD.bazel
large/module0021_internal/: BUILD.bazel
large/module0021_public/: BUILD.bazel
large/module0025_generated/: BUILD.bazel
large/module0025_internal/: BUILD.bazel
large/module0027/: BUILD.bazel
large/module0027/src/java/module0027/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module0029_generated/: BUILD.bazel
large/module0029_internal/: BUILD.bazel
large/module0029_public/: BUILD.bazel
large/module0032/: BUILD.bazel
large/module0032_internal/: BUILD.bazel
large/module0035_generated/: BUILD.bazel
large/module0036_generated/: BUILD.bazel
large/module0036_internal/: BUILD.bazel
large/module0038/: BUILD.bazel
large/module0039/: BUILD.bazel
large/module0040_public/: BUILD.bazel
large/module0042_internal/: BUILD.bazel
large/module0044_public/: BUILD.bazel
large/module0046_generated/: BUILD.bazel
large/module0046_internal/: BUILD.bazel
large/module0049_internal/: BUILD.bazel
large/module0051/: BUILD.bazel
large/module0051_generated/: BUILD.bazel
large/module0051_public/: BUILD.bazel
large/module0052/: BUILD.bazel
large/module0052_generated/: BUILD.bazel
large/module0052_internal/: BUILD.bazel
large/module0054/: BUILD.bazel
large/module0055_generated/: BUILD.bazel
large/module0055_internal/: BUILD.bazel
large/module0057/: BUILD.bazel
large/module0058/: BUILD.bazel
large/module0059_generated/: BUILD.bazel
large/module0059_public/: BUILD.bazel
large/module0060/: BUILD.bazel
large/module0060_generated/: BUILD.bazel
large/module0061/: BUILD.bazel
large/module0062/: BUILD.bazel
large/module0063/: BUILD.bazel
large/module0064/: BUILD.bazel
large/module0064_public/: BUILD.bazel
large/module0066/: BUILD.bazel
large/module0067/: BUILD.bazel
large/module0068_internal/: BUILD.bazel
large/module0068_public/: BUILD.bazel
large/module0070_internal/: BUILD.bazel
large/module0072_internal/: BUILD.bazel
large/module0082/: BUILD.bazel
large/module0349_public/: BUILD.bazel
large/module0349_public/src/java/module0349_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module0793_internal/: BUILD.bazel
large/module0793_internal/src/java/module0793_internal/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module0806_public/: BUILD.bazel
large/module0806_public/src/java/module0806_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module0942_public/: BUILD.bazel
large/module0942_public/src/java/module0942_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1130/: BUILD.bazel
large/module1130/src/java/module1130/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1154/: BUILD.bazel
large/module1154/src/java/module1154/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1232/: BUILD.bazel
large/module1232/src/java/module1232/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1254/: BUILD.bazel
large/module1254/src/java/module1254/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1306_public/: BUILD.bazel
large/module1306_public/src/java/module1306_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1340_internal/: BUILD.bazel
large/module1340_internal/src/java/module1340_internal/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1854/: BUILD.bazel
large/module1854/src/java/module1854/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module1961/: BUILD.bazel
large/module1961/src/java/module1961/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module2045/: BUILD.bazel
large/module2045/src/java/module2045/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module2105/: BUILD.bazel
large/module2105/src/java/module2105/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
large/module2242_public/: BUILD.bazel
large/module2242_public/src/java/module2242_public/a/: Foo0.java  Foo1.java  Foo2.java  Foo3.java  IFoo0.java  IFoo1.java  IFoo2.java  IFoo3.java
module1/: BUILD
module2/: BUILD
small/: WORKSPACE
(+40962 files in other folders)
